Fixed a layout bug where element size wasn't correctly factored in.
Refactored HorizontalValueLayoutTest to the same structure as the Vertical.
Should perhaps look into creating a base test for these two since they share
so much.

--- a/implementation/src/defaults.css
+++ b/implementation/src/defaults.css
@@ -11,6 +11,6 @@ patrickmowrer|HSlider
 patrickmowrer|VSlider
 {
     skinClass: ClassReference("com.patrickmowrer.skins.VSliderSkin");
-    data-tip-offset-x: -35; 
+    data-tip-offset-x: 35; 
     data-tip-offset-y: 0;
 }
